Fix horizontal scroll in mobile

--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -1,3 +1,7 @@
+.context {
+  overflow-x: hidden;
+}
+
 .ui.attached.segment {
   border: 0;
 }
